--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,11 @@ mybatis.configuration.mapUnderscoreToCamelCase=true
 
 # logger
 logging.level.com.nowcoder.community=debug
+
+#MailProperties
+spring.mail.host=smtp.sina.com
+spring.mail.port=465
+spring.mail.username=kwh361@sina.com
+spring.mail.password=3abdc653257298f3
+spring.mail.protocol=smtps
+spring.mail.properties.mail.smtp.ssl.enable=true
