--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -68,3 +68,7 @@ spring.quartz.properties.org.quartz.jobStore.driverDelegateClass=org.quartz.impl
 spring.quartz.properties.org.quartz.jobStore.isClustered=true
 spring.quartz.properties.org.quartz.threadPool.class=org.quartz.simpl.SimpleThreadPool
 spring.quartz.properties.org.quartz.threadPool.threadCount=5
+
+# wk
+wk.image.command=D:/developer_tools/wkhtmltopdf/bin/wkhtmltoimage
+wk.image.storage=D:/developer_tools/Java/data/wk-images
